[project]
name = "python-load-testing"
version = "0.1.0"
description = "How much load can an ML service in python handle?"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "aiohttp==3.9.1",
    "numpy==2.3.0",
    "locust==2.37.14",
    "ipykernel==6.30.1",
    "pandas==2.3.2",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
]
